  (Michi Mutsuzaki via rakeshr)

  ZOOKEEPER-2137 Make testPortChange() less flaky (Hongchao Deng via michim)

  ZOOKEEPER-1893. automake: use serial-tests option (michim via camille)

  ZOOKEEPER-1865 Fix retry logic in Learner.connectToLeader() (Edward Carter
  via michim)

  ZOOKEEPER-2109 Typo in src/c/src/load_gen.c (surendra singh lilhore via rakeshr)

IMPROVEMENTS:
  ZOOKEEPER-1660 Documentation for Dynamic Reconfiguration (Reed Wanderman-Milne via shralex)  

  ZOOKEEPER-2017 New tests for reconfig failure cases (Alexander Shraer and
  Hongchao Deng via michim)

  ZOOKEEPER-2030 dynamicConfigFile should have an absolute path, not a relative
  path, to the dynamic configuration file (Alexander Shraer via michim)

  ZOOKEEPER-2039 Jute compareBytes incorrect comparison index (Ian Dimayuga via fpj) 

  ZOOKEEPER-1917 Apache Zookeeper logs cleartext admin passwords (fpj via michim)

  ZOOKEEPER-1948 Enable JMX remote monitoring (Biju Nair via rakeshr)

  ZOOKEEPER-2054 test-patch.sh: don't set ulimit -n (michim via rakeshr)
  
  ZOOKEEPER-2066 Updates to README.txt. (Wendy Smoak via camille)

  ZOOKEEPER-2079 Stop daemon with "kill" rather than "kill -9" (Guillaume ALAUX
  via michim)

  ZOOKEEPER-1963 Make JDK 7 the minimum requirement for Zookeeper 
  (Hongchao via fpj)

  ZOOKEEPER-2110 Typo fixes in the ZK documentation. (Jeffrey Schroeder via rakeshr)

  ZOOKEEPER-1907 Improve Thread handling (Rakesh R via michim)

  ZOOKEEPER-2107 zookeeper client should support custom HostProviders 
  (Robert Kamphuis via rakeshr)

Release 3.5.0 - 8/4/2014

NEW FEATURES:
  ZOOKEEPER-1994. Auto-backup configuration files; config version becomes part of filename (Hongchao Deng via shralex)

  ZOOKEEPER-1355. Add zk.updateServerList(newServerList) (Alex Shraer, Marshall McMullen via fpj)

  ZOOKEEPER-1572. Add an async (Java) interface for multi request (Sijie Guo via camille)

  ZOOKEEPER-107. Allow dynamic changes to server cluster membership (Alex Shraer via breed)
